ajout du DMZ sans les restrictions

--- a/project-files/dynamips/0eec738d-7bf6-47f6-9847-c02b44b8772b/configs/i1_startup-config.cfg
+++ b/project-files/dynamips/0eec738d-7bf6-47f6-9847-c02b44b8772b/configs/i1_startup-config.cfg
@@ -23,6 +23,7 @@ no ip dhcp use vrf connected
 ip dhcp excluded-address 170.50.192.1 170.50.192.10
 ip dhcp excluded-address 170.50.192.33 170.50.192.42
 ip dhcp excluded-address 170.50.192.129 170.50.192.138
+ip dhcp excluded-address 10.0.0.11 10.0.0.254
 !
 ip dhcp pool finances
    network 170.50.192.0 255.255.255.224
@@ -47,6 +48,10 @@ ip dhcp pool R&D
 ip dhcp pool production
    network 170.50.192.128 255.255.255.128
    default-router 170.50.192.254 
+!
+ip dhcp pool DMZ
+   network 10.0.0.0 255.255.255.0
+   default-router 10.0.0.1 
 !
 !
 ip auth-proxy max-nodata-conns 3
