--- a/project-files/dynamips/95185cc2-a4b7-4d8d-99c4-69c0ee1e99b8/configs/i4_startup-config.cfg
+++ b/project-files/dynamips/95185cc2-a4b7-4d8d-99c4-69c0ee1e99b8/configs/i4_startup-config.cfg
@@ -1,8 +1,4 @@
 !
-!
-!
-!
-!
 
 !
 version 12.4
@@ -10,7 +6,7 @@ service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
-hostname R3
+hostname R4
 !
 boot-start-marker
 boot-end-marker
@@ -51,28 +47,23 @@ ip tcp synwait-time 5
 !
 !
 interface Ethernet0/0
- ip address 170.50.192.98 255.255.255.240
+ ip address 170.50.192.253 255.255.255.0
  half-duplex
 !
 interface Ethernet0/1
- ip address 170.50.192.81 255.255.255.240
- ip helper-address 170.50.192.1
+ ip address 10.0.0.1 255.255.255.0
+ ip helper-address 170.50.192.128
  half-duplex
 !
 interface Ethernet0/2
- ip address 170.50.192.254 255.255.255.128
- ip helper-address 170.50.192.97
+ no ip address
+ shutdown
  half-duplex
 !
 interface Ethernet0/3
  no ip address
  shutdown
  half-duplex
-!
-router rip
- version 2
- network 170.50.0.0
- no auto-summary
 !
 no ip http server
 no ip http secure-server
