ajout du DMZ avec règle semi-fonctionelle

--- a/project-files/dynamips/0eec738d-7bf6-47f6-9847-c02b44b8772b/configs/i1_startup-config.cfg
+++ b/project-files/dynamips/0eec738d-7bf6-47f6-9847-c02b44b8772b/configs/i1_startup-config.cfg
@@ -1,4 +1,5 @@
 !
+!
 
 !
 version 12.4
@@ -48,6 +49,10 @@ ip dhcp pool R&D
 ip dhcp pool production
    network 170.50.192.128 255.255.255.128
    default-router 170.50.192.254 
+!
+ip dhcp pool land
+   network 170.50.192.112 255.255.255.240
+   default-router 170.50.192.113 
 !
 ip dhcp pool DMZ
    network 10.0.0.0 255.255.255.0
