--- a/project-files/dynamips/16759fb4-66c7-480b-8245-e06546c5980e/configs/i4_startup-config.cfg
+++ b/project-files/dynamips/16759fb4-66c7-480b-8245-e06546c5980e/configs/i4_startup-config.cfg
@@ -47,12 +47,15 @@ ip tcp synwait-time 5
 !
 !
 interface Ethernet0/0
- ip address 170.50.192.253 255.255.255.0
+ ip address 170.50.192.114 255.255.255.240
+ ip helper-address 170.50.192.96
  half-duplex
 !
 interface Ethernet0/1
  ip address 10.0.0.1 255.255.255.0
- ip helper-address 170.50.192.128
+ ip access-group pingACL in
+ ip helper-address 170.50.192.96
+ ip helper-address 170.50.192.112
  half-duplex
 !
 interface Ethernet0/2
@@ -65,12 +68,23 @@ interface Ethernet0/3
  shutdown
  half-duplex
 !
+router rip
+ version 2
+ network 10.0.0.0
+ network 170.50.0.0
+ no auto-summary
+!
 no ip http server
 no ip http secure-server
 !
 ip forward-protocol nd
 !
 !
+!
+ip access-list extended pingACL
+ permit icmp any 10.0.0.0 0.0.0.255
+ deny   icmp 10.0.0.0 0.0.0.255 any
+ permit ip any any
 no cdp log mismatch duplex
 !
 !
