--- a/project-files/dynamips/aed8c0d5-006f-4ea1-9d06-b794f8194805/configs/i3_startup-config.cfg
+++ b/project-files/dynamips/aed8c0d5-006f-4ea1-9d06-b794f8194805/configs/i3_startup-config.cfg
@@ -1,8 +1,4 @@
 !
-!
-!
-!
-!
 
 !
 version 12.4
@@ -65,8 +61,8 @@ interface Ethernet0/2
  half-duplex
 !
 interface Ethernet0/3
- no ip address
- shutdown
+ ip address 170.50.192.113 255.255.255.240
+ ip helper-address 170.50.192.97
  half-duplex
 !
 router rip
